# py-client-integration-tests

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
tests/: __init__.py  test_documents.py  test_search_index.py  utils.py
tests/docs/: test_concepts_vector.py
tests/docs/search/: test_text_search.py
tests/docs/text_search/: search.py
