[tool.poetry]
name = "tigris-integration"
version = "0.1.0"
description = ""
authors = ["Adil Ansari <adil@tigrisdata.com>"]
readme = "README.md"
packages = [{include = "tigris_integration"}]

[tool.poetry.dependencies]
python = "^3.11"
tigrisdb = "^1.0.0.b1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
